# paradicms.github.io

./: README.md  docusaurus.config.js  package.json  pyproject.toml
.github/workflows/: build-deploy.yml
blog/: 2023-05-11-data-model-applications.md  2023-05-20-data-first-or-interface-first.md  2023-06-05-javascript-rdf-techniques.md  2023-06-05-rdf-backed-models-in-typescript.md  2023-06-07-rdf-backed-models-in-typescript.md  2023-07-12-ld4-2023.md  authors.yml
blog/2022-04-05-improving-the-faceted-search-interface-in-the-paradicms-work-search-app/: _BeforeAfterFiguresContainer.tsx  index.md  index.mdx
blog/2022-04-05-improving-the-paradicms-work-search-user-experience/: index.md
blog/2022-04-11-improving-the-faceted-search-interface-in-the-paradicms-work-search-app/: _Figure.tsx  index.mdx
blog/2023-05-20-data-first-or-interface-first/: index.mdx
blog/2023-07-16-integrating-getty-linked-art/: _getty_iiif_presentation_api_manifest.jsonld.md  _getty_iiif_presentation_api_manifest.ttl.md  _getty_linked_art_human_made_object.jsonld.md  _getty_linked_art_human_made_object.ttl.md  _linked_art_documentation_human_made_object.jsonld.md  _linked_art_documentation_human_made_object.ttl.md  index.mdx
docs/: introduction.md
docs/how-to/: _category_.json
docs/introduction/: _getting-started.md  apps.md  data-model.md  features.md  getting-started.md  index.md  motivation.md
script/: generate-ambient-data-tables.py  generate-enrichment-tables.py  generate-github-action-input-tables.py  generate-json-ld-contexts.py  generate-ontology-properties-tables.py
(+230 files in other folders)
